fixed item-card wrapping

--- a/racket-tracker/client/src/features/viewItem/ViewItem.css
+++ b/racket-tracker/client/src/features/viewItem/ViewItem.css
@@ -40,12 +40,13 @@
 }
 
 .item-card {
+    display: flex;
+    flex-direction: row;
     position: relative;
     border-radius: 5pt;
     background-color: lightgrey;
     column-gap: 10px;
-    align-items: center;
-    min-height: 200px;
+    align-items: start;
     width: 700px;
     margin: 25pt;
     padding: 10pt 25pt;
@@ -83,9 +84,6 @@
 } */
 
 .item-actions {
-    position: absolute;
-    top: 10px;
-    right: 10px;
     display: flex;
     flex-direction: column;
     height: fit-content;
